[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Gameboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Autoclicker.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Gameboard" parent="." instance=ExtResource( 1 )]

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Autoclicker" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Autoclicker"]
process_mode = 0
wait_time = 0.1
autostart = true

[connection signal="complete" from="Gameboard" to="." method="_on_Gameboard_complete"]
[connection signal="tile_changed" from="Gameboard" to="." method="_on_Gameboard_tile_changed"]
[connection signal="tile_clicked" from="Gameboard" to="." method="_on_Gameboard_tile_clicked"]
[connection signal="click" from="Autoclicker" to="." method="_on_Autoclicker_click"]
[connection signal="timeout" from="Autoclicker/Timer" to="Autoclicker" method="_on_Timer_timeout"]
